Created simple buttons
HTML buttons for LogIn / SignIn created.

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -4,5 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>
+        <button type="button" onclick="alert('Hello world!')">Log in</button>
+        <button type="button" onclick="alert('Hello world!')">Sign up!</button>
+    </p>
+    
 </div>
