Login and Sign-Up System in ASP.NET MVC
Login and Sign-Up buttons on the main page.
Redirects to appropriate pages (LogIn.cshtml and SignUp.cshtml) on button click.
MVC structure with separate controller for user authentication

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>
-        <button type="button" onclick="alert('Hello world!')">Log in</button>
-        <button type="button" onclick="alert('Hello world!')">Sign up!</button>
+        <button type="button" onclick="location.href='@Url.Action("LogIn", "Account")'">Log in</button>
+        <button type="button" onclick="location.href='@Url.Action("SignUp", "Account")'">Sign up!</button>
     </p>
     
 </div>
