--- a/WebApplication1/Views/Account/LogIn.cshtml
+++ b/WebApplication1/Views/Account/LogIn.cshtml
@@ -1,7 +1,22 @@
-﻿@{
+﻿@model WebApplication1.Models.User
+@{
     ViewData["Title"] = "Log In Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome! Please log in.</h1>
 </div>
+<form asp-action="LogIn" method="post">
+    <div class="form-group">
+        <label asp-for="UserName"></label>
+        <input asp-for="UserName" class="form-control" />
+        <span asp-validation-for="UserName" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="PasswordHash"></label>
+        <input asp-for="PasswordHash" name="password" type="password" class="form-control" />
+        <span asp-validation-for="PasswordHash" class="text-danger"></span>
+    </div>
+    <p></p>
+    <button type="submit" class="btn btn-primary">Log In</button>
+</form>>
