--- a/WebApplication1/Views/Account/LogIn.cshtml
+++ b/WebApplication1/Views/Account/LogIn.cshtml
@@ -9,6 +9,8 @@
 <form asp-action="LogIn" method="post">
     <div class="form-group">
         <label asp-for="UserName"></label>
+        <label>or</label>
+        <label asp-for="Email"> </label>
         <input asp-for="UserName" class="form-control" />
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
