--- a/WebApplication1/Views/Account/AdminHomePage.cshtml
+++ b/WebApplication1/Views/Account/AdminHomePage.cshtml
@@ -23,3 +23,7 @@
         @TempData["ErrorMessage"]
     </div>
 }
+
+<a href="@Url.Action("Create", "SuperBox")" class="btn btn-primary mt-3">
+    Create New SuperBox
+</a>
