--- a/WebApplication1/Views/Account/AdminHomePage.cshtml
+++ b/WebApplication1/Views/Account/AdminHomePage.cshtml
@@ -27,3 +27,7 @@
 <a href="@Url.Action("Create", "SuperBox")" class="btn btn-primary mt-3">
     Create New SuperBox
 </a>
+
+<a href="@Url.Action("ViewSuperBox", "SuperBox")" class="btn btn-primary mt-3">
+    View All SuperBoxes
+</a>
