--- a/WebApplication1/Views/Account/LogIn.cshtml
+++ b/WebApplication1/Views/Account/LogIn.cshtml
@@ -15,9 +15,9 @@
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="PasswordHash"></label>
-        <input asp-for="PasswordHash" name="password" type="password" class="form-control" />
-        <span asp-validation-for="PasswordHash" class="text-danger"></span>
+        <label asp-for="Password"></label>
+        <input asp-for="Password" name="password" type="password" class="form-control" />
+        <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <p></p>
     <button type="submit" class="btn btn-primary">Log In</button>
