--- a/WebApplication1/Views/Account/SignUp.cshtml
+++ b/WebApplication1/Views/Account/SignUp.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebApplication1.Models.User
 @{
-    ViewData["Title"] = "Sign In Page";
+    ViewData["Title"] = "Sign Up Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Sign in to your account</h1>
+    <h1 class="display-4">Welcome! Create an account.</h1>
 </div>
 
 <form asp-action="SignUp" method="post">
@@ -19,9 +19,14 @@
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="PasswordHash"></label>
-        <input asp-for="PasswordHash" name="password" type="password" class="form-control" />
-        <span asp-validation-for="PasswordHash" class="text-danger"></span>
+        <label asp-for="Password"></label>
+        <input asp-for="Password" name="password" type="password" class="form-control" />
+        <span asp-validation-for="Password" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label for="confirmPassword">Confirm Password</label>
+        <input id="confirmPassword" name="confirmPassword" type="password" class="form-control" />
+        <span class="text-danger"></span>
     </div>
     <p></p>
     <button type="submit" class="btn btn-primary">Register</button>
