Added LogOut functionality to AdminHomePage

--- a/WebApplication1/Views/Admin/AdminHomePage.cshtml
+++ b/WebApplication1/Views/Admin/AdminHomePage.cshtml
@@ -30,3 +30,9 @@
 <a href="@Url.Action("ViewSuperBox", "SuperBox")" class="btn btn-primary mt-3">
     View All SuperBoxes
 </a>
+<p></p>
+<div>
+    <form asp-controller="Account" asp-action="Logout" method="post">
+        <button type="submit" class="btn btn-danger">Logout</button>
+    </form>
+</div>
