Fixed Linter erros
Fixed Linter errors

Fixed Linter errors x2

Fixed Linter Errors x3

Fixed Linter errors

Finally fixed it

Corrected typo

--- a/WebApplication1/Views/Account/UserHomePage.cshtml
+++ b/WebApplication1/Views/Account/UserHomePage.cshtml
@@ -10,7 +10,8 @@ else
 {
     <p>Please <a asp-controller="Account" asp-action="LogIn">log in</a>.</p>
 }
-
+<button type="submit" class="btn btn-primary">Make Order</button>
+<p></p>
 <div>
     <form asp-controller="Account" asp-action="Logout" method="post">
         <button type="submit" class="btn btn-danger">Logout</button>
