--- a/WebApplication1/Views/Account/UserHomePage.cshtml
+++ b/WebApplication1/Views/Account/UserHomePage.cshtml
@@ -1,56 +1,55 @@
-@model WebApplication1.Models.Order;
+@model WebApplication1.Models.Order
+
 @{
-    ViewData["Title"] = "User Home Page";
-}
-@{
-var superBoxes = ViewBag.SuperBoxes as List<WebApplication1.Models.SuperBox>;
+ViewData["Title"] = "User Home Page";
 }
 
 @if (User.Identity.IsAuthenticated)
 {
-    <p>Welcome back, @User.Identity.Name!</p>
+<p>Welcome back, @User.Identity.Name!</p>
 }
 else
 {
-    <p>Please <a asp-controller="Account" asp-action="LogIn">log in</a>.</p>
+<p>Please <a asp-controller="Account" asp-action="LogIn">log in</a>.</p>
 }
 
+@if (TempData["SuccessMessage"] != null)
+{
+<div class="alert alert-success">
+    @TempData["SuccessMessage"]
+</div>
+}
 <div class="align-content-start">
     <h2>Make a delivery order:</h2>
 </div>
-<form asp-action="UserHomePage" method="post">
-    <div class="form-group">
-        <label asp-for="User"></label>
-        <input asp-for="User.UserName" class="form-control" readonly />
-        <span asp-validation-for="User" class="text-danger"></span>
-    </div>
 
+<form asp-action="UserHomePage" method="post">
+   
     <div class="form-group">
-        <label asp-for="SuperBoxId">
-            Choose a Superbox:
-        </label>
-        <select asp-for="SuperBoxId" class="form-control" asp-items="@(new SelectList(Model.SuperBoxOptions, "Id", "DisplayAddress" ))">
-            <option value="">Select a SuperBox</option> <!-- Placeholder option -->
+        <label>User Name</label>
+        <input value="@User.Identity.Name" class="form-control" readonly />
+    </div>
+    
+    <div class="form-group">
+        <label asp-for="SuperBoxId">Choose a SuperBox:</label>
+        <select asp-for="SuperBoxId" class="form-control" asp-items="ViewBag.SuperBoxOptions">
+            <option value="">Select a SuperBox</option>
         </select>
         <span asp-validation-for="SuperBoxId" class="text-danger"></span>
     </div>
-
+    
     <div class="form-group">
-        <label asp-for="RelevantInfo">
-            Important information about your delivery order:
-        </label>
+        <label asp-for="RelevantInfo">Important information about your delivery order:</label>
         <input asp-for="RelevantInfo" class="form-control" />
         <span asp-validation-for="RelevantInfo" class="text-danger"></span>
     </div>
-
+    
     <div class="form-group">
-        <label asp-for="IsUrgent">
-            Is your delivery order urgent?
-        </label>
+        <label asp-for="IsUrgent">Is your delivery order urgent?</label>
         <input asp-for="IsUrgent" type="checkbox" class="form-check-input" />
         <span asp-validation-for="IsUrgent" class="text-danger"></span>
     </div>
-
+    
     <button type="submit" class="btn btn-primary">Submit Order</button>
 </form>
 <p></p>
@@ -59,3 +58,4 @@ else
         <button type="submit" class="btn btn-danger">Logout</button>
     </form>
 </div>
+    
