--- a/WebApplication1/Views/Account/LogIn.cshtml
+++ b/WebApplication1/Views/Account/LogIn.cshtml
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
         <label asp-for="Password"></label>
-        <input asp-for="Password" name="password" type="password" class="form-control" />
+        <input asp-for="Password" name="password" type="password" class="form-control" required />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <p></p>
