Admin + User story view all orders
A button has been added to both admin and user pages to view all orders.

--- a/WebApplication1/Views/Admin/AdminHomePage.cshtml
+++ b/WebApplication1/Views/Admin/AdminHomePage.cshtml
@@ -31,8 +31,13 @@
     View All SuperBoxes
 </a>
 <p></p>
+
+<button type="button" class="btn-secondary" onclick="window.location='@Url.Action("ViewAllOrders", "Account")'">View All Orders</button>
+<p></p><p></p><p></p>
 <div>
     <form asp-controller="Account" asp-action="Logout" method="post">
         <button type="submit" class="btn btn-danger">Logout</button>
     </form>
 </div>
+<p></p><p></p><p></p>
+
