--- a/WebApplication1/Views/Account/UserHomePage.cshtml
+++ b/WebApplication1/Views/Account/UserHomePage.cshtml
@@ -58,9 +58,11 @@ else
 <button type="button" class="btn-secondary" onclick="window.location='@Url.Action("UserOrders", "Account")'">View My Orders</button>
 <p></p><p></p><p></p>
 
+<button type="button" class="btn-secondary" onclick="window.location='@Url.Action("ViewAllOrders", "Account")'">View All Orders</button>
+<p></p><p></p><p></p>
 <div>
     <form asp-controller="Account" asp-action="Logout" method="post">
         <button type="submit" class="btn btn-danger">Logout</button>
     </form>
 </div>
-    
+
