Fixed bugs in UserHomePage
Removed "View all Orders" button.
Corrected typos in titles.

--- a/WebApplication1/Views/Account/ViewAllOrders.cshtml
+++ b/WebApplication1/Views/Account/ViewAllOrders.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<WebApplication1.Models.Order>
 
-<h2>Comenzi</h2>
+<h2>Orders</h2>
 <table class="table table-striped">
     <thead>
     <tr>
