--- a/WebApplication1/Views/Admin/ViewOrdersForSuperBox.cshtml
+++ b/WebApplication1/Views/Admin/ViewOrdersForSuperBox.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Orders for SuperBox: @Model.SuperBox.DisplayAddress</h2>
 
-<h3>Comenzi în acest SuperBox:</h3>
+<h3>Orders in this SuperBox:</h3>
 
 @if (Model.Orders != null && Model.Orders.Any())
 {
