--- a/WebApplication1/Views/Admin/ViewOrdersForSuperBox.cshtml
+++ b/WebApplication1/Views/Admin/ViewOrdersForSuperBox.cshtml
@@ -25,6 +25,7 @@
         <tr>
             <th>
                 <input type="checkbox" id="selectAll" />
+                <label for="selectAll">Select All</label>
             </th>
             <th>Order ID</th>
             <th>Status</th>
