--- a/WebApplication1/Views/Account/LogIn.cshtml
+++ b/WebApplication1/Views/Account/LogIn.cshtml
@@ -1,24 +1,27 @@
 ﻿@model WebApplication1.Models.User
+<link rel="stylesheet" href="~/css/SignUpLogIn.css" asp-append-version="true"/>
 @{
     ViewData["Title"] = "Log In Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome! Please log in.</h1>
+<div class="form-container">
+    <h1>Welcome! Please log in.</h1>
+    <form asp-action="LogIn" method="post">
+        <div class="form-group">
+            <label asp-for="UserName"></label>
+            <label>or</label>
+            <label asp-for="Email"> </label>
+            <input asp-for="UserName" class="form-control" />
+            <span asp-validation-for="UserName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Password"></label>
+            <input asp-for="Password" name="password" type="password" class="form-control" required />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+        <p></p>
+        <button type="submit" class="btn btn-primary">Log In</button>
+    </form></div>
+<div class="image-container">
+    <img src="~/images/bk3.png" alt="Background Image">
 </div>
-<form asp-action="LogIn" method="post">
-    <div class="form-group">
-        <label asp-for="UserName"></label>
-        <label>or</label>
-        <label asp-for="Email"> </label>
-        <input asp-for="UserName" class="form-control" />
-        <span asp-validation-for="UserName" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" name="password" type="password" class="form-control" required />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <p></p>
-    <button type="submit" class="btn btn-primary">Log In</button>
-</form>
