--- a/WebApplication1/Views/Account/SignUp.cshtml
+++ b/WebApplication1/Views/Account/SignUp.cshtml
@@ -1,34 +1,31 @@
 ﻿@model WebApplication1.Models.User
+<link rel="stylesheet" href="~/css/SignUpLogIn.css" asp-append-version="true"/>
 @{
-    ViewData["Title"] = "Sign Up Page";
+ViewData["Title"] = "Sign Up Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome! Create an account.</h1>
+<div class="form-container">
+    <h1>Welcome! Create an account.</h1>
+    <form asp-action="SignUp" method="post">
+        <div class="form-group">
+            <label asp-for="UserName"></label>
+            <input asp-for="UserName" class="form-control" />
+            <span asp-validation-for="UserName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Email"></label>
+            <input asp-for="Email" type="email" class="form-control" />
+            <span asp-validation-for="Email" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Password"></label>
+            <input asp-for="Password" name="password" type="password" class="form-control" />
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label for="confirmPassword">Confirm Password</label>
+            <input id="confirmPassword" name="confirmPassword" type="password" class="form-control" />
+            <span class="text-danger"></span>
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+    </form>
 </div>
-
-<form asp-action="SignUp" method="post">
-    <div class="form-group">
-        <label asp-for="UserName"></label>
-        <input asp-for="UserName" class="form-control" />
-        <span asp-validation-for="UserName" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" type="email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" name="password" type="password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label for="confirmPassword">Confirm Password</label>
-        <input id="confirmPassword" name="confirmPassword" type="password" class="form-control" />
-        <span class="text-danger"></span>
-    </div>
-    <p></p>
-    <button type="submit" class="btn btn-primary">Register</button>
-</form>
-
