--- a/WebApplication1/Views/Home/Privacy.cshtml
+++ b/WebApplication1/Views/Home/Privacy.cshtml
@@ -4,3 +4,7 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+
+<div class="image-container">
+    <img src="~/images/privacy.jpg" alt="Background Image">
+</div>
