Added ReceiverUserName property to PlaceOrderModel
Updated controller to search for ReceiverUserId based on the provided ReceiverUserName.
ReceiverUserId is now set programmatically after validating the username.
Added form validations in backend.
Users cannot send packages to themselves or deliver to the same chosen SuperBox.

--- a/WebApplication1/Views/Account/PlaceOrder.cshtml
+++ b/WebApplication1/Views/Account/PlaceOrder.cshtml
@@ -26,9 +26,9 @@
     </div>
 
     <div class="form-group">
-        <label for="ReceiverUserId">Receiver User ID:</label>
-        <input asp-for="ReceiverUserId" class="form-control"/>
-        <span asp-validation-for="ReceiverUserId" class="text-danger"></span>
+            <label for="ReceiverUserName">Receiver User ID:</label>
+        <input asp-for="ReceiverUserName" class="form-control"/>
+        <span asp-validation-for="ReceiverUserName" class="text-danger"></span>
     </div>
 
     <div class="form-group">
