Improved UserHomePage UI and organisation
Updated button styles for improved UI.
Added custom CSS for user interface styling
Added background image with opacity effect.

--- a/WebApplication1/Views/Account/PlaceOrder.cshtml
+++ b/WebApplication1/Views/Account/PlaceOrder.cshtml
@@ -26,7 +26,7 @@
     </div>
 
     <div class="form-group">
-            <label for="ReceiverUserName">Receiver User ID:</label>
+            <label for="ReceiverUserName">Receiver User Name:</label>
         <input asp-for="ReceiverUserName" class="form-control"/>
         <span asp-validation-for="ReceiverUserName" class="text-danger"></span>
     </div>
