--- a/WebApplication1/wwwroot/css/Admin.css
+++ b/WebApplication1/wwwroot/css/Admin.css
@@ -52,7 +52,9 @@ body {
     transition: background-color 0.3s ease;
     text-align: center;
 }
-
+.btn-danger{
+    margin-bottom: 75%;
+}
 .btn-primary {
     background-color: #3b8a3b;
     color: white;
